--- a/pages/sba_index.html
+++ b/pages/sba_index.html
@@ -178,9 +178,9 @@
         <div class="p-2 col 4 border border-primary">
             <div class="card-body">
                 <div class="img-container">
-                    <img src="../images/DBZ/goku.jpg" alt="">
+                    <img src="../images/JJK/itadori2.jpeg" alt="itadori">
                 </div>
-                <h1>Dragon Ball Z</h1>
+                <h1>Jujutsu Kaisen</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores praesentium illum deserunt facere
                     labore
                     officiis nesciunt aspernatur minima iure provident dolorum veniam omnis, quos facilis illo tempore
@@ -191,9 +191,9 @@
         <div class="p-2 col 4 border border-primary">
             <div class="card-body">
                 <div class="img-container">
-                    <img src="../images/DBZ/goku.jpg" alt="">
+                    <img src="../images/FMA/edward2.jpeg" alt="">
                 </div>
-                <h1>Dragon Ball Z</h1>
+                <h1>Fullmetal Alchemist</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores praesentium illum deserunt facere
                     labore
                     officiis nesciunt aspernatur minima iure provident dolorum veniam omnis, quos facilis illo tempore
@@ -201,10 +201,7 @@
                     perferendis? Iste!</p>
             </div>
         </div>
-        <div class="p-2 col 4 border border-primary">Flex Item 2</div>
-        <div class="p-2 col 4 border border-primary">Flex Item 3</div>
-        <div class="p-2 col 4 border border-primary">Flex Item 4</div>
-        <div class="p-2 col 4 border border-primary">Flex Item 5</div>
+
     </div>
 
 
