--- a/pages/about.html
+++ b/pages/about.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/about.css">
     <link rel="stylesheet" href="./bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
     <script src="./bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
     <title>About Us</title>
     <style>
@@ -52,7 +55,7 @@
         </div>
         <div style="background-color: burlywood;" class="row row2">
             <div id="divider2" class="col-2">
-                <p style="font-size: x-large;">About us</p>
+                <p id="aboutUs" style="font-size: x-large;">About us</p>
             </div>
             <div id="divider" class="col-8">
                 <p>
@@ -80,11 +83,12 @@
                     sword-like sharpness! Understood? Great!
                 </p>
             </div>
+            <footer>
+                <p id="footer" style="text-align: center;">© 2024 Code Anime. All rights reserved.</p>
+            </footer>
         </div>
 
-        <footer>
-            <p id="footer" style="text-align: center;">© 2024 Code Anime. All rights reserved.</p>
-        </footer>
+
 </body>
 
 </html>
