--- a/pages/login.html
+++ b/pages/login.html
@@ -22,13 +22,13 @@
         <div class="p-1"><a href="./about.html">About Us</a></div>
         <div class="dropdown">
             <div class="dropdown-content">
-                <a href="">DBZ</a>
-                <a href="">Naruto</a>
-                <a href="">AOT</a>
-                <a href="">JJK</a>
-                <a href="">FMA</a>
+                <a href="https://en.wikipedia.org/wiki/Dragon_Ball_Z" target="_blank">DBZ</a>
+                <a href="https://en.wikipedia.org/wiki/Naruto" target="_blank">Naruto</a>
+                <a href="https://en.wikipedia.org/wiki/Attack_on_Titan" target="_blank">AOT</a>
+                <a href="https://en.wikipedia.org/wiki/Jujutsu_Kaisen" target="_blank">JJK</a>
+                <a href="https://en.wikipedia.org/wiki/Fullmetal_Alchemist" target="_blank">FMA</a>
             </div>
-            <div class="p-1"><a href="#"><button class="dropbtn">Gallery</button></a></div>
+            <div class="p-1"><a href="./gallery.html"><button class="dropbtn">Gallery</button></a></div>
         </div>
         <div class="p-1"><a href="./newsletter.html">Newsletter</a></div>
         <div class="p-1 ms-auto"><a href="./login.html">Log In</a></div>
@@ -43,7 +43,7 @@
                         <p style="margin-top: 0px;">Sign up For Secret Access <a href="./newsletter.html">here</a>!</p>
                     </div>
                     <legend style="text-align: center; font-size: large;">Login</legend>
-                    <label  for="UserName">Username: </label>
+                    <label for="UserName">Username: </label>
                     <input type="text" name="userName" id="UserName" required><br>
                     <label style="padding-top: 20px;" for="password">Password: </label>
                     <input type="password" name="password" id="password"><br>
@@ -53,6 +53,11 @@
         </div>
     </div>
 
+    <div class="mx-auto p-2" style="width: 300px; margin-top: 350px;">
+        <footer>
+            <p id="footer">© 2024 Code Anime. All rights reserved.</p>
+        </footer>
+    </div>
 
 </body>
 
