--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -21,18 +21,18 @@
     <div class="p-1"><a href="./sba_index.html">Home</a></div>
     <div class="p-1"><a href="./about.html">About Us</a></div>
     <div class="dropdown">
-        <div class="dropdown-content">
-            <a href="./gallery.html/#dbz">DBZ</a>
-            <a href="./gallery.html/#nar">Naruto</a>
-            <a href="./gallery.html/#aot">AOT</a>
-            <a href="./gallery.html/#jjk">JJK</a>
-            <a href="./gallery.html/#fma">FMA</a>
-        </div>
-        <div class="p-1"><a href="./gallery.html"><button class="dropbtn">Gallery</button></a></div>
+      <div class="dropdown-content">
+        <a href="https://en.wikipedia.org/wiki/Dragon_Ball_Z" target="_blank">DBZ</a>
+        <a href="https://en.wikipedia.org/wiki/Naruto" target="_blank">Naruto</a>
+        <a href="https://en.wikipedia.org/wiki/Attack_on_Titan" target="_blank">AOT</a>
+        <a href="https://en.wikipedia.org/wiki/Jujutsu_Kaisen" target="_blank">JJK</a>
+        <a href="https://en.wikipedia.org/wiki/Fullmetal_Alchemist" target="_blank">FMA</a>
+      </div>
+      <div class="p-1"><a href="./gallery.html"><button class="dropbtn">Gallery</button></a></div>
     </div>
     <div class="p-1"><a href="./newsletter.html">Newsletter</a></div>
     <div class="p-1 ms-auto"><a href="./login.html">Log In</a></div>
-</div>
+  </div>
 
   <form id="form" action="#">
     <div class="container">
