--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -51,10 +51,10 @@
       <div class="container" style="background-color:white">
         <input type="text" placeholder="Name" name="name" required>
         <input type="text" placeholder="Email address" name="mail" required>
-        <label>
-          <input type="checkbox" name="subscribe"> Weekly Newsletter
+        <label id="align-input">
+          <input  type="checkbox" name="subscribe"> Weekly Newsletter
         </label>
-        <label>
+        <label id="align-input">
           <input type="checkbox" name="subscribe"> Monthly Newsletter
         </label>
       </div>
