Changed index html name

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="navbar d-flex">
-        <div class="p-1"><a href="./sba_index.html">Home</a></div>
+        <div class="p-1"><a href="./index.html">Home</a></div>
         <div class="p-1"><a href="./about.html">About Us</a></div>
         <div class="dropdown">
             <div class="dropdown-content">
